--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>
       Learn Enough to Be Dangerous
@@ -7,6 +7,11 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
     <h1>The Learn Enough Story</h1>
 
     <p>
