--- a/tags.html
+++ b/tags.html
@@ -7,6 +7,11 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <div>
+            <a href="index.html">Home</a>
+            <a href="moby_dick.html">Moby Dick</a>
+            <a href="tags.html">HTML Tags</a>
+          </div>
         <h1>Important HTML tags</h1>
         <a href="https://www.flickr.com/photos/jdhancock/3814523970" target="_blank" rel="noopener"><img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"></a>
         <p>
@@ -47,6 +52,26 @@
                 <td>table data</td>
                 <td>include a table data cell</td>
             </tr>
+            <tr>
+                <td><code>header</code></td>
+                <td>header</td>
+                <td>idk</td>
+            </tr>
+            <tr>
+                <td><code>div</code></td>
+                <td>div</td>
+                <td>divides page</td>
+            </tr>
+            <tr>
+                <td><code>ol</code></td>
+                <td>ordered list</td>
+                <td>creates a list of items with numbers</td>
+            </tr>
+            <tr>
+                <td><code>ul</code></td>
+                <td>unordered list</td>
+                <td>creates a list of items as bullet points</td>
+            </tr>
         </table>
         <h2>Inline Elements</h2>
         <table>
@@ -63,6 +88,56 @@
                 <td>make emphasized text</td>
                 <td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
                 <td><em>technical sophistication</em></td>
+            </tr>
+            <tr>
+                <td><code>strong</code></td>
+                <td>strong</td>
+                <td>make strong text</td>
+                <td>
+                    <code>&lt;strong&gt;at least a billion people&lt;/strong&gt;</code>
+                </td>
+                <td><strong>at least a billion people</strong></td>
+            </tr>
+            <tr>
+                <td><code>a</code></td>
+                <td>anchor</td>
+                <td>make hyperlink</td>
+                <td>
+                    <code>&lt;a href="https://learnenough.com/"&gt;Learn Enough&lt;/a&gt;</code>
+                </td>
+                <td><a href="https://learnenough.com/">Learn Enough</a></td>
+            </tr>
+            <tr>
+                <td><code>img</code></td>
+                <td>image</td>
+                <td>include an image</td>
+                <td>
+                    <code>&lt;img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;</code>
+                </td>
+                <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
+            </tr>
+            <tr>
+                <td><code>code</code></td>
+                <td>code</td>
+                <td>display text as code</td>
+                <td>
+                    <code>&lt;code&gt;this is code&lt;/code&gt;</code>
+                </td>
+                <td><code>code</code></td>
+            </tr>
+            <tr>
+                <td><code>span</code></td>
+                <td>span</td>
+                <td>wrap text in a div</td>
+                <td><code>&lt;span&gt;Call me Ishmael.&lt;/span&gt;</code></td>
+                <td><span>Call me Ishmael.</span></td>
+            </tr>
+            <tr>
+                <td><code>li</code></td>
+                <td>list item</td>
+                <td>indicates a list item</td>
+                <td><code>&lt;li&gt;this is the list item&lt;/li&gt;</code></td>
+                <td><li>List item</li></td>
             </tr>
         </table>
     </body>
