Refactor inline styles into a stylesheet

--- a/tags.html
+++ b/tags.html
@@ -7,10 +7,10 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <div>
+        <div style="text-align: right;">
             <a href="index.html">Home</a>
-            <a href="moby_dick.html">Moby Dick</a>
-            <a href="tags.html">HTML Tags</a>
+            <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
+            <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
           </div>
         <h1>Important HTML tags</h1>
         <a href="https://www.flickr.com/photos/jdhancock/3814523970" target="_blank" rel="noopener"><img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"></a>
@@ -28,8 +28,8 @@
                 <th>Purpose</th>
             </tr>
             <tr>
-                <td><code>h1</code>&ndash;<code>h6</code></td>
-                <td>headings</td>
+                <td style="padding: 20px;"><code>h1</code>&ndash;<code>h6</code></td>
+                <td style="padding: 20px;">headings</td>
                 <td>include a heading (levels 1&ndash;6)</td>
             </tr>
             <tr>
@@ -71,6 +71,11 @@
                 <td><code>ul</code></td>
                 <td>unordered list</td>
                 <td>creates a list of items as bullet points</td>
+            </tr>
+            <tr>
+                <td><code>blockquote</code></td>
+                <td>blockquote</td>
+                <td>emphasizes a portion of text as a quote seperate from the rest of the page</td>
             </tr>
         </table>
         <h2>Inline Elements</h2>
@@ -138,6 +143,39 @@
                 <td>indicates a list item</td>
                 <td><code>&lt;li&gt;this is the list item&lt;/li&gt;</code></td>
                 <td><li>List item</li></td>
+            </tr>
+        </table>
+        <h2>Document Tags</h2>
+        <table>
+            <tr>
+                <th>Tag</th>
+                <th>Name</th>
+                <th>Purpose</th>
+            </tr>
+            <tr>
+                <td><code>html</code></td>
+                <td>HTML</td>
+                <td>Defines the file type as HTML</td>
+            </tr>
+            <tr>
+                <td><code>head</code></td>
+                <td>head</td>
+                <td>Defines the head of the document</td>
+            </tr>
+            <tr>
+                <td><code>body</code></td>
+                <td>body</td>
+                <td>Defines the body of the document</td>
+            </tr>
+            <tr>
+                <td><code>title</code></td>
+                <td>Title</td>
+                <td>Defines the Title of the document</td>
+            </tr>
+            <tr>
+                <td><code>meta</code></td>
+                <td>meta</td>
+                <td>The section where meta tags are added</td>
             </tr>
         </table>
     </body>
