--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
       Learn Enough to Be Dangerous
     </title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div>
+    <div id="main-nav" class="nav-menu">
       <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
+      <a href="tags.html" class="nav-spacing">HTML Tags</a>
+      <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
     </div>
     <h1>The Learn Enough Story</h1>
 
@@ -45,9 +46,20 @@
     <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
       <img src="images/kitten.jpg" alt="An adorable kitten">
     </a>
+    <h2>Quotations</h2>
+    <p>
+      In addition to hosting most of the world's supply of kittne videos, the Web is also full of inspiring quotes, perhaps none more so than this one:
+    </p>
+
+    <blockquote style="padding: 2px 20px; background: greenyellow;">
+      <p>
+        <em>Don't believe every quote you read on the internet.</em>
+        <br>
+        -Abraham Lincoln
+      </p>
+    </blockquote>
 
     <h2>Background</h2>
-    
     <p>
       Learn Enough to Be Dangerous is an outgrowth of the <a href="https://railstutorial.org/">Ruby on Rails Tutorial</a> and the <a href="https://www.softcover.io/">Softcover publishing platform</a>. This page is part of the sample site for <a href="https://www.learnenough.com/html"><em>Learn Enough HTML to Be Dangerous</em></a>, which teaches the basics of <strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup<strong>L</strong>anguage, the universal language of the World Wide Web. Other related tutorials can be found at <a href="https://www.learnenough.com/">learnenough.com</a>
     </p>
