--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="images/small_twitter_logo.png">
       </a>
       You should follow Learn Enough on Twitter
-      <a href="https://twitter.com/learnenough"
+      <a href="https://twitter.com/learnenough" class="image-link"
          target="_blank" rel="noopener">here</a>.
     </p>
 
@@ -64,7 +64,7 @@
       Learn Enough to Be Dangerous is an outgrowth of the <a href="https://railstutorial.org/">Ruby on Rails Tutorial</a> and the <a href="https://www.softcover.io/">Softcover publishing platform</a>. This page is part of the sample site for <a href="https://www.learnenough.com/html"><em>Learn Enough HTML to Be Dangerous</em></a>, which teaches the basics of <strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup<strong>L</strong>anguage, the universal language of the World Wide Web. Other related tutorials can be found at <a href="https://www.learnenough.com/">learnenough.com</a>
     </p>
 
-    <h2>Founders</h2>
+    <h2 id="founders">Founders</h2>
 
     <p>
       Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee
