--- a/moby_dick.html
+++ b/moby_dick.html
@@ -5,11 +5,11 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <div style="text-align: right;">
-            <a href="index.html" style="text-decoration: none;">Home</a>
-            <a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none;">HTML Tags</a>
-            <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none;">Moby Dick</a>
-          </div>
+        <div id="main-nav" class="nav-menu">
+            <a href="index.html">Home</a>
+            <a href="tags.html" class="nav-spacing">HTML Tags</a>
+            <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
+        </div>
         <header style="text-align: center;margin: 0 0 80px;">
             <h1>A Softcover Book Report</h1>
             <h2>Moby-Dick (or, The Whale)</h2>
