--- a/tags.html
+++ b/tags.html
@@ -7,11 +7,11 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <div style="text-align: right;">
+        <div id="main-nav" class="nav-menu">
             <a href="index.html">Home</a>
-            <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
-            <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
-          </div>
+            <a href="tags.html" class="nav-spacing">HTML Tags</a>
+            <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
+        </div>
         <h1>Important HTML tags</h1>
         <a href="https://www.flickr.com/photos/jdhancock/3814523970" target="_blank" rel="noopener"><img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"></a>
         <p>
